src/app/styles/index.scss
@import "utils/variables.scss";
@import url("https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Bree Serif", serif;
  font-style: normal;
  font-weight: 400;
}
body {
  max-width: 1500px;
  margin: 0 auto;
  background-color: #f1f1f1;
}

